Can remove books and toggle isRead property

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
         id="header-image"
       />
       <h1 id="header-heading">My Library</h1>
-      <button id="add-book-button">Add Book</button>
+      <div id="button-container">
+        <button id="add-book-button" class="header-button">Add Book</button>
+        <button id="refresh-library-button" class="header-button">
+          Refresh Library
+        </button>
+        <button id="populate-library-button" class="header-button">
+          Populate Library
+        </button>
+      </div>
     </header>
     <div id="form-container">
       <p id="cancel-input">X</p>
