--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <button id="populate-library-button" class="header-button">
           Populate Library
         </button>
+        <button id="delete-library-button" class="header-button delete-library-button">
+          Delete Library
+        </button>
       </div>
     </header>
     <div id="flex-wrapper" class="flex-wrapper">
