--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
       <footer id="footer" class="footer">
         <span id="footer-content"
           >Created by William Carpenter-Frank | 2021 |
-          <a href="https://github.com/zeagle848/Library">GitHub</a></span
-        >
+          <a href="https://github.com/zeagle848/Library">GitHub</a>
+        </span>
       </footer>
     </div>
     <script type="module" src="./script.js"></script>
